[package]
name = "rigctld"
version = "0.1.0"
authors = ["Max <max@karl.wf>"]
edition = "2021"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/koarlchen/rigctld.git"
description = "A client implementation for rigctld"
keywords = ["ham", "ham-radio", "hamlib", "rigctld"]


[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
thiserror = "1.0.40"
regex = "1.8.4"
lazy_static = "1.4.0"