[package]
name = "rigctld"
version = "0.1.0"
authors = ["Max <max@karl.wf>"]
edition = "2021"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/koarlchen/rigctld.git"
description = "A client implementation for hamlib's rigctld"
keywords = ["ham", "ham-radio", "hamlib", "rigctld"]


[dependencies]
tokio = { version = "1.29.1", features = ["net", "io-util", "time", "process"] }
thiserror = "1.0.44"
regex = "1.9.3"
lazy_static = "1.4.0"

[dev-dependencies]
tokio = { version = "1.28.2", features = ["full"]}